# backlog-mcp-server

./: .dockerignore  .drone.yml  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_MCP.md  TODO.md  docker-compose.yml  fastapi_mcp_server.py  mcp_config.json  pyproject.toml  requirements.txt  reset_chromadb.py
config/: settings.py
git_chat_log/: main.py
git_chat_log/api/: agent_endpoints.py  mcp_tools.py
git_chat_log/models/: backlog.py  meeting.py
git_chat_log/services/: git_service.py  langchain_agent_simple.py  mcp_adapter.py  scheduler_service.py  vector_service.py
src/: main.py  mcp_sse_server.py
src/api/: mcp_server.py
src/models/: __init__.py
src/services/: __init__.py  git_service.py  langchain_agent.py  notification_service.py  vector_service.py
